Atualização Questao CRUD
Criação do CREATE

--- a/Quiz/src/main/java/com/mycompany/quiz/telas/QuestoesTela.form
+++ b/Quiz/src/main/java/com/mycompany/quiz/telas/QuestoesTela.form
@@ -191,6 +191,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Novo"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_novoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_atualizar">
           <Properties>
