--- a/Quiz/src/main/java/com/mycompany/quiz/telas/GerenciamentoTela.form
+++ b/Quiz/src/main/java/com/mycompany/quiz/telas/GerenciamentoTela.form
@@ -65,9 +65,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="41" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="btn_usuarios" min="-2" max="-2" attributes="0"/>
-                      <Component id="btn_questoes" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="btn_questoes" max="32767" attributes="0"/>
+                      <Component id="btn_usuarios" max="32767" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
               </Group>
@@ -96,8 +96,11 @@
         </Component>
         <Component class="javax.swing.JButton" name="btn_usuarios">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Gerenciamento de usu&#xe1;rios"/>
+            <Property name="text" type="java.lang.String" value="Listagem de usu&#xe1;rios"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_usuariosActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
