--- a/Quiz/src/main/java/com/mycompany/quiz/telas/UsuariosTela.form
+++ b/Quiz/src/main/java/com/mycompany/quiz/telas/UsuariosTela.form
@@ -107,6 +107,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txf_id">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Id"/>
@@ -116,6 +117,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txf_nome">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Nome"/>
@@ -125,6 +127,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txf_email">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Email"/>
@@ -134,12 +137,16 @@
         </Component>
         <Component class="javax.swing.JTextField" name="txf_pontuacao">
           <Properties>
+            <Property name="editable" type="boolean" value="false"/>
             <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
               <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
                 <TitledBorder title="Pontua&#xe7;&#xe3;o"/>
               </Border>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txf_pontuacaoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btn_voltar">
           <Properties>
