--- a/Quiz/src/main/java/com/mycompany/quiz/telas/MenuJogoTela.form
+++ b/Quiz/src/main/java/com/mycompany/quiz/telas/MenuJogoTela.form
@@ -69,6 +69,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Conta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_contaActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_sair">
       <Properties>
