--- a/Quiz/src/main/java/com/mycompany/quiz/telas/MenuJogoTela.form
+++ b/Quiz/src/main/java/com/mycompany/quiz/telas/MenuJogoTela.form
@@ -56,6 +56,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Jogar"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_jogarActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="btn_gerenciamento">
       <Properties>
